<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".ui.view.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/tv_profile"
            android:textColor="@color/colorBlack"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textSize="@dimen/tv_profile"
            android:textColor="@color/colorBlack"
            android:gravity="end"
            android:layout_weight="2"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/tv_profile"
            android:textColor="@color/colorBlack"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_email"
            android:textSize="@dimen/tv_profile"
            android:textColor="@color/colorBlack"
            android:gravity="end"
            android:layout_weight="2"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="@dimen/tv_profile"
            android:textColor="@color/colorBlack"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_number"
            android:textSize="@dimen/tv_profile"
            android:textColor="@color/colorBlack"
            android:gravity="end"
            android:layout_weight="4"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"/>

    <LinearLayout
        android:id="@+id/myServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/my_services"
            android:textSize="@dimen/tv_profile"
            android:textColor="@color/colorBlack"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_my_services"
            android:textSize="@dimen/tv_profile"
            android:textColor="@color/colorBlack"
            android:gravity="end"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/right"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"/>

    <LinearLayout
        android:id="@+id/servicesRequested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/requested_services"
            android:textSize="@dimen/tv_profile"
            android:textColor="@color/colorBlack"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_requested_services"
            android:textSize="@dimen/tv_profile"
            android:textColor="@color/colorBlack"
            android:gravity="end"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/right"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

</LinearLayout>