<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/serviceContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10sdp"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_20sdp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sample_service_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/tv_heading"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_price"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tv_sub_heading"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/sample_service_price"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tv_sub_heading"
                    app:layout_constraintStart_toEndOf="@id/textview1"
                    app:layout_constraintTop_toBottomOf="@id/name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:text="@string/service_date"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tv_sub_heading"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/date"
                    app:layout_constraintStart_toEndOf="@id/price"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/sample_service_date"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tv_sub_heading" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_location"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/tv_sub_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/sample_service_location"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/tv_sub_heading" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>